--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -8,7 +8,7 @@
 {% block content %}
 <div id="content" style="min-height:0">
   <div id="content_header"><h2>Infos</h2></div>
-  <div style="float:left;width:73%;min-height:600px;border-right:1px solid #eee;">
+  <div style="float:left;width:73%;min-height:400px;border-right:1px solid #eee;overflow:auto;">
     <table class="list">
       <thead>
         <th width="60px">Date</th>
