change cosmetics in history

--- a/templates/history/item.html
+++ b/templates/history/item.html
@@ -3,7 +3,7 @@
 {% block content %}
 <div id="content" style="min-height:0">
   <div id="content_header">
-    <h2>Détail commande {{ history.provider }} du {{ history.date_created|date }}</h2>
+    <h2>Détail commande {{ history.provider }} réceptionnée le {{ history.date_created|date }}</h2>
   </div>
   
   <table class="list">
