menu_home selected

--- a/templates/base.html
+++ b/templates/base.html
@@ -38,7 +38,7 @@
         <div id="main-menu">
           <ul>
             <li>
-              <a href="{% url home %}" class="{% block home %}{% endblock %}">
+              <a href="{% url home %}" class="{% block menu_home %}{% endblock %}">
                 Accueil
               </a>
             </li>
