added a bug tab and moved bug reports to this tab

--- a/templates/base.html
+++ b/templates/base.html
@@ -90,6 +90,11 @@
                 Equipes
               </a>
             </li>
+            <li>
+              <a href="{% url issue_index %}" class="{% block menu_bugs %}{% endblock %}">
+                Bugs
+              </a>
+            </li>
           </ul>
         </div>
     </div>
