--- a/templates/issues/item.html
+++ b/templates/issues/item.html
@@ -1,7 +1,7 @@
 {% extends "main_custom.html" %}
 {% load filters %}
 
-{% block menu_home %}selected{% endblock %}
+{% block menu_bugs %}selected{% endblock %}
 
 {% block header %}Modification d'un bug{% endblock %}
 
