--- a/templates/base.html
+++ b/templates/base.html
@@ -92,7 +92,7 @@
             </li>
             <li>
               <a href="{% url issue_index %}" class="{% block menu_bugs %}{% endblock %}">
-                Bugs
+                Bugs / Améliorations
               </a>
             </li>
           </ul>
