--- a/templates/issues/index.html
+++ b/templates/issues/index.html
@@ -17,15 +17,15 @@
     </a>
   </div>
   <div class="btn_wrapper">
-    <a href="{% url issue_new %}" class="btn_medium">
-      <img src="{{ MEDIA_URL }}img/icons/bug_add.png" />Déclarer un bug
+    <a href="{% url issue_new %}" class="btn_small">
+      <img src="{{ MEDIA_URL }}img/icons/bug_add.png" />Ajouter
     </a>
   </div>
 {% endblock %}
 
 {% block content %}
 <div id="content" style="min-height:0">
-  <div id="content_header"><h2>Bugs</h2></div>
+  <div id="content_header"><h2>Bugs et améliorations</h2></div>
     <table class="list">
       <thead>
         <th>Titre</th>
