--- a/templates/product/index.html
+++ b/templates/product/index.html
@@ -9,32 +9,32 @@
 
 {% if products %}
 
-{# START: Filter box #}
-<div id="content" style="float:left;min-height:0;margin-right:10px">
-  <h2>Chercher par fournisseur</h2>
-  <form action="{% url product_index %}" method="get">
-    <table>
-      <tr>
-        <td>{{ filter_form.provider }}</td>
-        <td><button type="submit" class="all">Chercher</button></td>
-        <td><a href="{% url product_index %}" class="refresh">Liste globale</a></td>
-      </tr>
-    </table>
-  </form>
+{# Start: FILTER FORM #}
+<div id="content" style="min-height:0" class="collapsable">
+  <h2>Recherche avancée</h2>
+  <div class="content">
+    <form action="{% url product_index %}" method="GET" id="history_filter">{% csrf_token %}
+      <strong>Chercher les produits qui correspondent à {{ filter_form.connector }} conditions suivantes:</strong>
+      <div class="cleaner"></div>
+      <table>
+        <tr>
+          <td>Fournisseur:</td>
+          <td>{{ filter_form.provider }}</td>
+          <td width="10%"></td>
+          <td>Produit:</td>
+          <td>{{ filter_form.name }}</td>
+          <td width="10%"></td>
+          <td>Référence:</td>
+          <td>{{ filter_form.reference }}</td>
+        </tr>
+      </table>
+      <div class="cleaner"></div>
+      <button type="submit" class="all">Chercher</button>
+      <a href="{% url product_index %}" class="refresh">Liste globale</a>
+    </form>
+  </div>
 </div>
-<div id="content" style="float:left;min-height:0">
-  <h2>Chercher par produit</h2>
-  <form action="{% url product_index %}" method="get">
-    <table>
-      <tr>
-        <td>{{ filter_form.product }}</td>
-        <td><button type="submit" class="all">Chercher</button></td>
-        <td><a href="{% url product_index %}" class="refresh">Liste globale</a></td>
-      </tr>
-    </table>
-  </form>
-</div>
-{# END: Filter box #}
+{# End: FILTER FORM #}
 
 <div class="cleaner"></div>
 
