budget must still appear for secretary but they should not be able to change it after a number has been given to the order

--- a/templates/order/_order_detail.html
+++ b/templates/order/_order_detail.html
@@ -14,7 +14,9 @@
         {{ order.budget }}
       </a>
     </li>
-  {% endif %}
+  {% else %}{% if order.number %}
+    <li>Budget imputé:{{ order.budget }}</li>
+  {% endif %}{% endif %}
 </ul>
 
 <table class="list">
