--- a/templates/tab_history.html
+++ b/templates/tab_history.html
@@ -58,7 +58,7 @@
       <tbody>
         {% for item in history.object_list %}
           <tr class="{% cycle 'even' 'odd' %}">
-            <td>{{ item.date_created|date }}</td>
+            <td>{{ item.date_delivered|date }}</td>
             <td>{{ item.team }}</td>
             <td>{{ item.provider }}</td>
             <td>{{ item.price }}</td>
