--- a/templates/order/order_details_secretary.html
+++ b/templates/order/order_details_secretary.html
@@ -4,7 +4,7 @@
 {% block menu_order %}selected{% endblock %}
 
 {% block content %}
-<div id="content" style="min-height:0">
+<div id="content" style="min-height:0" class="order">
   <div id="content_header">
     <h2>Détail commande {{ order.provider }} du {{ order.date_created|date }}</h2>
   </div>
@@ -13,7 +13,7 @@
     <li>Statut: {{ order.get_status_display }}</li>
     {% if not order.number and not order.provider.is_local %}
       <li><strong>Budget à imputer:</strong>
-        <select order_id="{{ order.id }}" class="select-budget">
+        <select id="select-budget" url="{% url order_budget order.id %}">
           {% for budget in budgets %}
             <option value="{{budget.id}}" {% if order.budget == budget %}selected="selected"{% endif %}>
               {{budget}}
@@ -66,8 +66,9 @@
   </table>
   
   <p><strong>PRIX TOTAL COMMANDE: {{ order.price }} €</strong></p>
-  <input type="hidden" name="ajax-post-url" value="{% url set_item_quantity %}" />
-  <a href="{% url order.get_absolute_url %}" class="disk ajax-post">Enregistrer les modifications</a>
+  <a href="{{ order.get_absolute_url }}" class="disk ajax-post" url="{% url set_item_quantity %}">
+    Enregistrer les modifications
+  </a>
   <a href="{% url tab_orders %}" class="back">Retour aux commandes</a>
   
   <div style="float:right">
