--- a/media/css/style.css
+++ b/media/css/style.css
@@ -14,14 +14,34 @@ body, #wrapper {
 
 #top-menu {
   position: relative;
-  height: 21px;
+  height: 6px;
   margin: 0;
   padding: 0;
   font-size: 10px;
   background-color: #2C4056;
   color: #fff;
 }
-#top-menu ul {
+#account {
+  background-color: #2C4056;
+  float: right;
+  margin-right: 100px;
+  padding-bottom: 5px;
+  padding-left: 2px;
+  padding-right: 2px;
+  position: relative;
+  z-index: 20;
+  color: #fff;
+  -moz-border-radius-bottomright: 10px;
+  -moz-border-radius-bottomleft: 10px;
+  border-bottom-left-radius: 10px;
+  border-bottom-right-radius: 10px;
+}
+#account a {
+  color: #fff;
+  margin-left: 6px;
+  margin-right: 6px;
+}
+/*#top-menu ul {
   margin: 0;
   padding: 0 21px;
 }
@@ -45,7 +65,7 @@ body, #wrapper {
   color: #fff;
   text-decoration: none;
 }
-
+*/
 
 #header {
   position:relative;
@@ -125,6 +145,8 @@ body, #wrapper {
   z-index: 10;
   overflow: auto;
   background-color: #fff;
+  border-top-left-radius: 20px;
+  border-bottom-right-radius: 20px;
 }
 #main.nosidebar #content{ width: auto; border-right: 0; }
 
@@ -235,11 +257,14 @@ a img{ border: 0; }
 .user_green    { background: url('../img/icons/user_green.png');    }
 .user_red      { background: url('../img/icons/user_red.png');      }
 .user_orange   { background: url('../img/icons/user_orange.png');   }
+.door_in       { background: url('../img/icons/door_in.png')        }
+.shield        { background: url('../img/icons/shield.png')         }
 
 .cart_add, .cart_go, .cart_delete, .edit, .add, .delete, 
 .table_refresh, .table_filter, .table_go, 
 .arrow_right, .arrow_left, 
-.user_suit, .user_gray, .user_green, .user_orange, .user_red {
+.user_suit, .user_gray, .user_green, .user_orange, .user_red,
+.door_in, .shield {
     text-indent: 20px;
     padding-left: 20px;
     background-repeat: no-repeat;
