--- a/templates/order/_dialogs.html
+++ b/templates/order/_dialogs.html
@@ -1,41 +1,5 @@
 {% load filters %}
 
-<div id="setBudget" class="dialog" title="Choisir le budget à imputer">
-  <div class="form-row">
-    <label for="budget">Budget à imputer</label>
-    <div class="cleaner"></div>
-    <select name="budget" width="200px">
-      {% for budget in budgets %}
-        {% if order.budget == budget %}
-          <option selected="selected" value="{{budget.id}}">
-            {% if user|is_secretary %}{{budget.team.name}} - {% endif %}
-            {{budget}}
-          </option>
-        {% else %}
-          <option value="{{budget.id}}">
-            {% if user|is_secretary %}{{budget.team.name}} - {% endif %}
-            {{budget}}
-          </option>
-        {% endif %}
-      {% endfor %}
-    </select>
-  </div>
-</div>
-
-<div id="setQty" class="dialog" title="Modifier la quantité à commander">
-  <form action="{% url set_item_quantity %}" method="POST" style="padding:0">{% csrf_token %}
-    <input type="hidden" name="next" value="{{ next }}" />
-    <input type="hidden" name="orderitem_id" value="" />
-    <div class="form-row">
-      <div id="qty-error-msg"></div>
-      <label for="quantity">Quantité</label>
-      <div class="cleaner"></div>
-      <input type="text" name="quantity" value="" />
-      <div class="cleaner"></div>
-    </div>
-  </form>
-</div>
-
 <div id="confirmDel" class="dialog" title="Confirmer la suppression">
   Merci de confirmer la suppression.
 </div>
@@ -46,5 +10,5 @@
 </div>
 
 <div id="confirmDelCart" class="dialog" title="Confirmation requise">
-  Êtes-vous sûr de vouloir supprimer cet article ?
+  Êtes-vous sûr de vouloir retirer cet article ?
 </div>
