--- a/templates/tab_orders.html
+++ b/templates/tab_orders.html
@@ -6,24 +6,20 @@
 {% block content %}
 
 <div id="content" style="min-height:0">
-  <div id="content_header">
-    {% if user|is_secretary %}
-      <h2>Gestion des commandes</h2>
-    {% else %}
-      <h2>Commandes équipe {{ user.teammember_set.get.team }}</h2>
-    {% endif %}
-  </div>
+  <div id="content_header"><h2>Commandes en cours</h2></div>
   
   {% if orders.object_list %}
     <table class="list">
       <thead>
         <th>Date</th>
         <th>Fournisseur</th>
-        {% if user|is_secretary %}
+        {% if user|has_multiple_teams %}
           <th>Equipe</th>
+        {% endif %}
+        {% if user|is_validator %}
           <th>Budget</th>
         {% endif %}
-        <th>Prix</th>
+        <th>Montant</th>
         <th>Statut</th>
         <th>Cmde N°</th>
         <th>Dernière MAJ</th>
@@ -35,8 +31,10 @@
           <tr class="{% cycle 'even' 'odd' %}">
             <td>{{ order.date_created|date }}</td>
             <td>{{ order.provider.name }}</td>
-            {% if user|is_secretary %}
+            {% if user|has_multiple_teams %}
               <td>{{ order.get_full_name }}</td>
+            {% endif %}
+            {% if user|is_validator %}
               <td>{{ order.budget.name }}</td>
             {% endif %}
             <td>{{ order.price }} €</td>
@@ -44,22 +42,7 @@
             <td>{{ order.number|default:"" }}</td>
             <td>{{ order.last_change|date }}</td>
             <td>
-              <a href="{{ order.get_absolute_url }}?next={{next}}" class="pencil">Voir détail</a>
-              {% if user|is_secretary %}
-                <a href="{% url set_next_status order.id %}" class="next-status {{ order|dialogClass|default:"" }}">
-                  {% if order.status == 2 %}
-                    {% if order.budget.budget_type == 0 %}
-                      Saisie n° XLAB
-                    {% else %}
-                      Pour saisie SIFAC
-                    {% endif %}
-                  {% else %}{% if order.status == 3 %}
-                    Saisie n° SIFAC
-                  {% else %}{% if order.status == 4 %}
-                    Commande réceptionnée
-                  {% endif %}{% endif %}{% endif %}
-                </a>
-              {% endif %}
+              <a href="{{ order.get_absolute_url }}?next=tab_orders" class="pencil">Voir détail</a>
             </td>
           </tr>
         {% endfor %}
@@ -71,32 +54,6 @@
   {% else %}
     <p>Aucune commande en cours.</p>
   {% endif %}
-</div>
-
-
-
-{# ################## #}
-{#                    #}
-{#      DIALOGS       #}
-{#                    #}
-{# ################## #}
-
-<div id="setDeliveryDate" class="dialog" title="Date de livraison">
-  <div class="form-row">
-    <label for="delivery_date">Date de livraison (jj/mm/aaaa):</label>
-    <div class="cleaner"></div>
-    <input type="text" name="delivery_date" class="datepicker" />
-    <div class="cleaner"></div>
-  </div>
-</div>
-
-<div id="setOrderRef" class="dialog" title="Saisie du N° de commande">
-  <div class="form-row">
-    <label for="number">N° de commande:</label>
-    <div class="cleaner"></div>
-    <input type="text" name="number" />
-    <div class="cleaner"></div>
-  </div>
 </div>
 
 {% endblock %}
